--- a/neofetch.1
+++ b/neofetch.1
@@ -328,7 +328,7 @@ Solus, Source_Mage, Sparky, Star, SteamOS, SunOS, openSUSE_Leap,
 t2, openSUSE_Tumbleweed, openSUSE, SwagArch, Tails, Trisquel,
 Ubuntu\-Cinnamon, Ubuntu\-Budgie, Ubuntu\-GNOME, Ubuntu\-MATE,
 Ubuntu\-Studio, Ubuntu, Univention, Venom, Void, VNux, semc, Obarun,
-windows10, Windows7, Xubuntu, Zorin, and IRIX have ascii logos.
+windows10, Windows7, CoreOS, Silverblue, Xubuntu, Zorin, and IRIX have ascii logos.
 .IP
 NOTE: Arch, Ubuntu, Redhat, Fedora and Dragonfly have 'old' logo variants.
 .IP
